--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,10 @@
       Welcome to {{title}}!
     </h1>
   </div>
+  <div class="container-fluid text-center pb-5">
+    <div class="row justify-content-end">
+      <app-new-card-input (onCardAdd)="addCard($event)"></app-new-card-input>
+    </div>
+  </div>
   <app-card-list [cards]="cards"></app-card-list>
 </div>
